--- a/tests/spec-runner.html
+++ b/tests/spec-runner.html
@@ -20,7 +20,11 @@
         <script>
             require(
                 [
-                    'tests/spec/lib-spec'
+                    'tests/spec/lib-spec',
+                    'tests/spec/math-spec',
+                    'tests/spec/mesh-spec',
+                    'tests/spec/entity-spec',
+                    'tests/spec/surface-spec'
                 ],
                 function () {
                     var env = jasmine.getEnv();
