Go back to using "new" behind create factory method.

--- a/tests/spec-runner.html
+++ b/tests/spec-runner.html
@@ -22,9 +22,9 @@
                 [
                     'tests/spec/lib-spec',
                     'tests/spec/math-spec',
-                    'tests/spec/mesh-spec',
-                    'tests/spec/entity-spec',
-                    'tests/spec/surface-spec'
+                    'tests/spec/Mesh-spec',
+                    'tests/spec/Entity-spec',
+                    'tests/spec/Surface-spec'
                 ],
                 function () {
                     var env = jasmine.getEnv();
