--- a/tests/spec-runner.html
+++ b/tests/spec-runner.html
@@ -24,7 +24,8 @@
                     'tests/spec/math-spec',
                     'tests/spec/Mesh-spec',
                     'tests/spec/Entity-spec',
-                    'tests/spec/Surface-spec'
+                    'tests/spec/Surface-spec',
+                    'tests/spec/Camera-spec'
                 ],
                 function () {
                     var env = jasmine.getEnv();
