--- a/tests/spec-runner.html
+++ b/tests/spec-runner.html
@@ -11,6 +11,8 @@
         <script type="text/javascript" src="lib/jasmine-2.0.0/jasmine-html.js"></script>
         <script type="text/javascript" src="lib/jasmine-2.0.0/boot.js"></script>
 
+        <script type="text/javascript" src="spec/matcher-helper.js"></script>
+
         <script>
             var require = {
                 baseUrl: '../'
@@ -22,6 +24,8 @@
                 [
                     'tests/spec/lib-spec',
                     'tests/spec/math-spec',
+                    'tests/spec/Vector2-spec',
+                    'tests/spec/Vector3-spec',
                     'tests/spec/Mesh-spec',
                     'tests/spec/Entity-spec',
                     'tests/spec/Surface-spec',
