Begin working on Matrix3 class. Add addTo method to vector classes.

--- a/tests/spec-runner.html
+++ b/tests/spec-runner.html
@@ -26,6 +26,7 @@
                     'tests/spec/math-spec',
                     'tests/spec/Vector2-spec',
                     'tests/spec/Vector3-spec',
+                    'tests/spec/Matrix3-spec',
                     'tests/spec/Mesh-spec',
                     'tests/spec/Entity-spec',
                     'tests/spec/Surface-spec',
