Added a Matrix4 class.

--- a/tests/spec-runner.html
+++ b/tests/spec-runner.html
@@ -27,6 +27,7 @@
                     'tests/spec/Vector2-spec',
                     'tests/spec/Vector3-spec',
                     'tests/spec/Matrix3-spec',
+                    'tests/spec/Matrix4-spec',
                     'tests/spec/Mesh-spec',
                     'tests/spec/Entity-spec',
                     'tests/spec/Surface-spec',
