Rename all references to "iso-svg" to "PolygonJS".

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>iso-svg</title>
+        <title>PolygonJS Demo</title>
     </head>
     <body>
         <script>
@@ -10,6 +10,6 @@
             };
         </script>
         <script data-main="demo/app" src="../libs/requirejs/require.js"></script>
-        <noscript>Sorry, iso-svg requires JavaScript support.</noscript>
+        <noscript>Sorry, PolygonJS requires JavaScript support.</noscript>
     </body>
 </html>
