--- a/tests/spec-runner.html
+++ b/tests/spec-runner.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>iso-svg: Jasmine Spec Runner v2.0.0</title>
+        <title>polygonjs: Jasmine Spec Runner v2.0.0</title>
 
         <link rel="shortcut icon" type="image/png" href="lib/jasmine-2.0.0/jasmine_favicon.png">
         <link rel="stylesheet" type="text/css" href="lib/jasmine-2.0.0/jasmine.css">
