Tweaks to spec-runner.

--- a/tests/spec-runner.html
+++ b/tests/spec-runner.html
@@ -2,17 +2,13 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>polygonjs: Jasmine Spec Runner v2.0.0</title>
-
+        <title>PolygonJS: JS Unit Tests (Jasmine v2.0.0)</title>
         <link rel="shortcut icon" type="image/png" href="lib/jasmine-2.0.0/jasmine_favicon.png">
         <link rel="stylesheet" type="text/css" href="lib/jasmine-2.0.0/jasmine.css">
-
         <script type="text/javascript" src="lib/jasmine-2.0.0/jasmine.js"></script>
         <script type="text/javascript" src="lib/jasmine-2.0.0/jasmine-html.js"></script>
         <script type="text/javascript" src="lib/jasmine-2.0.0/boot.js"></script>
-
         <script type="text/javascript" src="spec/matcher-helper.js"></script>
-
         <script>
             var require = {
                 baseUrl: '../'
@@ -39,8 +35,9 @@
                 }
             );
         </script>
-
+        <style>body { font-family: sans-serif; }</style>
     </head>
     <body>
+        <h1>PolygonJS Unit Tests</h1>
     </body>
 </html>
