Added a Polygon entity class.

--- a/tests/spec-runner.html
+++ b/tests/spec-runner.html
@@ -26,6 +26,7 @@
                     'tests/spec/Matrix4-spec',
                     'tests/spec/Mesh-spec',
                     'tests/spec/Entity-spec',
+                    'tests/spec/Polygon-spec',
                     'tests/spec/Surface-spec',
                     'tests/spec/Camera-spec'
                 ],
