Add a HTML5 canvas rendering surface.

--- a/tests/spec-runner.html
+++ b/tests/spec-runner.html
@@ -27,7 +27,7 @@
                     'tests/spec/Mesh-spec',
                     'tests/spec/Entity-spec',
                     'tests/spec/Polygon-spec',
-                    'tests/spec/Surface-spec',
+                    'tests/spec/SvgSurface-spec',
                     'tests/spec/Camera-spec'
                 ],
                 function () {
