--- a/tests/spec-runner.html
+++ b/tests/spec-runner.html
@@ -25,10 +25,13 @@
                     'tests/spec/Matrix3-spec',
                     'tests/spec/Matrix4-spec',
                     'tests/spec/Mesh-spec',
-                    'tests/spec/Entity-spec',
-                    'tests/spec/Polygon-spec',
                     'tests/spec/SvgSurface-spec',
-                    'tests/spec/Camera-spec'
+                    'tests/spec/Entity-spec',
+                    'tests/spec/Camera-spec',
+                    'tests/spec/Light-spec',
+                    'tests/spec/Polygon-spec',
+                    'tests/spec/Scene-spec',
+                    'tests/spec/Engine-spec'
                 ],
                 function () {
                     var env = jasmine.getEnv();
