Add an index to test GH pages.

--- a/demo/index.html
+++ b/demo/index.html
@@ -2,6 +2,15 @@
 <html>
     <head>
         <title>PolygonJS Demo</title>
+        <style>
+            * {
+                margin: 0;
+                padding: 0;
+            }
+            svg, canvas {
+                max-width: 100%;
+            }
+        </style>
     </head>
     <body>
         <script>
