--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>PolygonJS</title>
     </head>
     <body>
-        <h1>PolygonJs</h1>
+        <h1>PolygonJS</h1>
     </body>
 </html>
