--- a/tests/spec-runner.html
+++ b/tests/spec-runner.html
@@ -30,6 +30,7 @@
                     'tests/spec/Camera-spec',
                     'tests/spec/Light-spec',
                     'tests/spec/Polygon-spec',
+                    'tests/spec/Polygons-spec',
                     'tests/spec/Scene-spec',
                     'tests/spec/Engine-spec'
                 ],
