Beginning work on the new "Renderer".

--- a/tests/spec-runner.html
+++ b/tests/spec-runner.html
@@ -32,7 +32,8 @@
                     'tests/spec/Polygon-spec',
                     'tests/spec/Polygons-spec',
                     'tests/spec/Scene-spec',
-                    'tests/spec/Engine-spec'
+                    'tests/spec/Engine-spec',
+                    'tests/spec/Renderer-spec'
                 ],
                 function () {
                     var env = jasmine.getEnv();
