Begin work on new Camera entity.

--- a/tests/spec-runner.html
+++ b/tests/spec-runner.html
@@ -27,7 +27,7 @@
                     'tests/spec/Mesh-spec',
                     'tests/spec/SvgSurface-spec',
                     'tests/spec/Entity-spec',
-                    'tests/spec/Camera-spec',
+                    'tests/spec/Camera-archive-spec',
                     'tests/spec/Light-spec',
                     'tests/spec/Polygon-spec',
                     'tests/spec/Polygons-spec',
