Fix double running of env.execute()

--- a/tests/spec-runner.html
+++ b/tests/spec-runner.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>PolygonJS: JS Unit Tests (Jasmine v2.0.0)</title>
+        <title>PolygonJS: JS Unit Tests (Jasmine)</title>
         <link rel="shortcut icon" type="image/png" href="lib/jasmine-2.0.0/jasmine_favicon.png">
         <link rel="stylesheet" type="text/css" href="lib/jasmine-2.0.0/jasmine.css">
         <script type="text/javascript" src="lib/jasmine-2.0.0/jasmine.js"></script>
@@ -27,7 +27,7 @@
                     'tests/spec/Mesh-spec',
                     'tests/spec/SvgSurface-spec',
                     'tests/spec/Entity-spec',
-                    'tests/spec/Camera-archive-spec',
+                    'tests/spec/Camera-spec',
                     'tests/spec/Light-spec',
                     'tests/spec/Polygon-spec',
                     'tests/spec/Polygons-spec',
