Various WIP changes.

--- a/tests/spec-runner.html
+++ b/tests/spec-runner.html
@@ -28,6 +28,8 @@
                     'tests/spec/SvgSurface-spec',
                     'tests/spec/Entity-spec',
                     'tests/spec/Camera-spec',
+                    'tests/spec/OrthographicCamera-spec',
+                    'tests/spec/PerspectiveCamera-spec',
                     'tests/spec/Light-spec',
                     'tests/spec/Polygon-spec',
                     'tests/spec/Model-spec',
