Add starting-point unit tests for surface classes.

--- a/tests/spec-runner.html
+++ b/tests/spec-runner.html
@@ -25,6 +25,8 @@
                     'tests/spec/Matrix3-spec',
                     'tests/spec/Matrix4-spec',
                     'tests/spec/Mesh-spec',
+                    'tests/spec/CanvasSurface-spec',
+                    'tests/spec/WebGLSurface-spec',
                     'tests/spec/SvgSurface-spec',
                     'tests/spec/Entity-spec',
                     'tests/spec/Camera-spec',
