Move 'math' class to 'math' folder and rename 'MissingMath' (a bit lame but I can't think of anything better right now).

--- a/tests/spec-runner.html
+++ b/tests/spec-runner.html
@@ -19,7 +19,7 @@
             require(
                 [
                     'tests/spec/lib-spec',
-                    'tests/spec/math-spec',
+                    'tests/spec/MissingMath-spec',
                     'tests/spec/Vector2-spec',
                     'tests/spec/Vector3-spec',
                     'tests/spec/Matrix3-spec',
