--- a/tests/spec-runner.html
+++ b/tests/spec-runner.html
@@ -18,7 +18,7 @@
         <script>
             require(
                 [
-                    'tests/spec/lib-spec',
+                    'tests/spec/Fn-spec',
                     'tests/spec/MissingMath-spec',
                     'tests/spec/Vector2-spec',
                     'tests/spec/Vector3-spec',
