Create custom jasmine matcher for "instance of" and use this across the unit tests.

--- a/tests/spec-runner.html
+++ b/tests/spec-runner.html
@@ -37,7 +37,8 @@
                     'tests/spec/Model-spec',
                     'tests/spec/Scene-spec',
                     'tests/spec/Engine-spec',
-                    'tests/spec/Renderer-spec'
+                    'tests/spec/Renderer-spec',
+                    'tests/spec/Color-spec'
                 ],
                 function () {
                     var env = jasmine.getEnv();
