--- a/tests/spec-runner.html
+++ b/tests/spec-runner.html
@@ -38,7 +38,8 @@
                     'tests/spec/Scene-spec',
                     'tests/spec/Engine-spec',
                     'tests/spec/Renderer-spec',
-                    'tests/spec/Color-spec'
+                    'tests/spec/Color-spec',
+                    'tests/spec/Material-spec'
                 ],
                 function () {
                     var env = jasmine.getEnv();
