--- a/tests/spec-runner.html
+++ b/tests/spec-runner.html
@@ -19,7 +19,7 @@
             require(
                 [
                     'tests/spec/Fn-spec',
-                    'tests/spec/MissingMath-spec',
+                    'tests/spec/PMath-spec',
                     'tests/spec/Vector2-spec',
                     'tests/spec/Vector3-spec',
                     'tests/spec/Matrix3-spec',
