--- a/tests/runner.html
+++ b/tests/runner.html
@@ -8,7 +8,7 @@
         <script type="text/javascript" src="lib/jasmine-2.0.0/jasmine.js"></script>
         <script type="text/javascript" src="lib/jasmine-2.0.0/jasmine-html.js"></script>
         <script type="text/javascript" src="lib/jasmine-2.0.0/boot.js"></script>
-        <script type="text/javascript" src="spec/matcher-helper.js"></script>
+        <script type="text/javascript" src="matchers.js"></script>
         <script>
             var require = {
                 baseUrl: '../'
@@ -18,28 +18,28 @@
         <script>
             require(
                 [
-                    'tests/spec/Fn-spec',
-                    'tests/spec/PMath-spec',
-                    'tests/spec/Vector2-spec',
-                    'tests/spec/Vector3-spec',
-                    'tests/spec/Matrix3-spec',
-                    'tests/spec/Matrix4-spec',
-                    'tests/spec/Mesh-spec',
-                    'tests/spec/CanvasSurface-spec',
-                    'tests/spec/WebGLSurface-spec',
-                    'tests/spec/SvgSurface-spec',
-                    'tests/spec/Entity-spec',
-                    'tests/spec/Camera-spec',
-                    'tests/spec/OrthographicCamera-spec',
-                    'tests/spec/PerspectiveCamera-spec',
-                    'tests/spec/Light-spec',
-                    'tests/spec/Polygon-spec',
-                    'tests/spec/Model-spec',
-                    'tests/spec/Scene-spec',
-                    'tests/spec/Engine-spec',
-                    'tests/spec/Renderer-spec',
-                    'tests/spec/Color-spec',
-                    'tests/spec/Material-spec'
+                    'tests/specs/Fn-spec',
+                    'tests/specs/PMath-spec',
+                    'tests/specs/Vector2-spec',
+                    'tests/specs/Vector3-spec',
+                    'tests/specs/Matrix3-spec',
+                    'tests/specs/Matrix4-spec',
+                    'tests/specs/Mesh-spec',
+                    'tests/specs/CanvasSurface-spec',
+                    'tests/specs/WebGLSurface-spec',
+                    'tests/specs/SvgSurface-spec',
+                    'tests/specs/Entity-spec',
+                    'tests/specs/Camera-spec',
+                    'tests/specs/OrthographicCamera-spec',
+                    'tests/specs/PerspectiveCamera-spec',
+                    'tests/specs/Light-spec',
+                    'tests/specs/Polygon-spec',
+                    'tests/specs/Model-spec',
+                    'tests/specs/Scene-spec',
+                    'tests/specs/Engine-spec',
+                    'tests/specs/Renderer-spec',
+                    'tests/specs/Color-spec',
+                    'tests/specs/Material-spec'
                 ],
                 function () {
                     var env = jasmine.getEnv();
