Experiment into football pitch rendering.

--- a/demo/index.html
+++ b/demo/index.html
@@ -18,7 +18,7 @@
                 baseUrl: '../'
             };
         </script>
-        <script data-main="demo/app" src="../libs/requirejs/require.js"></script>
+        <script data-main="demo/football-pitch" src="../libs/requirejs/require.js"></script>
         <noscript>Sorry, PolygonJS requires JavaScript support.</noscript>
     </body>
 </html>
