--- a/demo/index.html
+++ b/demo/index.html
@@ -14,7 +14,7 @@
     </head>
     <body>
 
-        <h1 class="page-title">PolygonJS Demos</h1>
+        <h1 class="page-title">PolygonJS</h1>
 
         <div class="demo">
             <h2 class="demo__title">Demo 001</h2>
