--- a/demo/index.html
+++ b/demo/index.html
@@ -16,18 +16,32 @@
 
         <h1 class="page-title">PolygonJS</h1>
 
-        <div class="demo">
-            <h2 class="demo__title">Demo 001</h2>
-            <div class="demo__surface" id="demo-001"></div>
+        <div id="demo-001" class="demo">
+            <h2 class="demo__title">Spikey Ball</h2>
+            <div class="demo__surface">
+                <span class="demo__surface-text t-small-caps">Tap to play</span>
+            </div>
             <script>
                 require(['demo/js/demo-001'], function (demo001) {
-                    demo001.init();
+                    demo001.init('demo-001');
+                });
+            </script>
+        </div><!--
+        --><div id="demo-002" class="demo">
+            <h2 class="demo__title">Demo 001</h2>
+            <div class="demo__surface">
+                <span class="demo__surface-text t-small-caps">Tap to play</span>
+            </div>
+            <script>
+                require(['demo/js/demo-001'], function (demo001) {
+                    demo001.init('demo-002');
                 });
             </script>
         </div><!--
         --><div class="demo">
             <h2 class="demo__title">Demo 002</h2>
-            <div class="demo__surface" id="demo-002"></div>
+            <div class="demo__surface" id="demo-002">
+            </div>
         </div><!--
         --><div class="demo">
             <h2 class="demo__title">Demo 003</h2>
@@ -36,10 +50,6 @@
         --><div class="demo">
             <h2 class="demo__title">Demo 004</h2>
             <div class="demo__surface" id="demo-004"></div>
-        </div><!--
-        --><div class="demo">
-            <h2 class="demo__title">Demo 005</h2>
-            <div class="demo__surface" id="demo-005"></div>
         </div>
 
         <noscript>Sorry, PolygonJS requires JavaScript support.</noscript>
