--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>PolygonJS Demo</title>
+        <meta name="viewport" content="width=device-width">
+
         <link rel="stylesheet" href="demo/css/typography.css">
         <link rel="stylesheet" href="demo/css/style.css">
 
