--- a/index.html
+++ b/index.html
@@ -18,32 +18,27 @@
 
         <h1 class="page-title">PolygonJS</h1>
 
-        <div id="demo-001" class="demo">
+        <div id="spikey-ball" class="demo">
             <h2 class="demo__title">Spikey Ball</h2>
             <div class="demo__surface">
                 <span class="demo__surface-text t-small-caps">Tap to play</span>
             </div>
             <script>
-                require(['demo/js/demo-001'], function (demo001) {
-                    demo001.init('demo-001');
+                require(['demo/js/spikey-ball'], function (app) {
+                    app.init('spikey-ball');
                 });
             </script>
         </div><!--
-        --><div id="demo-002" class="demo">
-            <h2 class="demo__title">Demo 001</h2>
+        --><div id="sea" class="demo">
+            <h2 class="demo__title">Sea</h2>
             <div class="demo__surface">
                 <span class="demo__surface-text t-small-caps">Tap to play</span>
             </div>
             <script>
-                require(['demo/js/demo-001'], function (demo001) {
-                    demo001.init('demo-002');
+                require(['demo/js/sea'], function (app) {
+                    app.init('sea');
                 });
             </script>
-        </div><!--
-        --><div class="demo">
-            <h2 class="demo__title">Demo 002</h2>
-            <div class="demo__surface" id="demo-002">
-            </div>
         </div><!--
         --><div class="demo">
             <h2 class="demo__title">Demo 003</h2>
