--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>PolygonJS Demo</title>
+        <title>PolygonJS</title>
         <meta name="viewport" content="width=device-width">
 
         <link rel="stylesheet" href="demo/css/typography.css">
@@ -18,25 +18,25 @@
 
         <h1 class="page-title">PolygonJS</h1>
 
-        <div id="spikey-ball" class="demo">
+        <div id="spikey-ball-demo" class="demo">
             <h2 class="demo__title">Spikey Ball</h2>
             <div class="demo__surface">
                 <span class="demo__surface-text t-small-caps">Tap to play</span>
             </div>
             <script>
-                require(['demo/js/spikey-ball'], function (app) {
-                    app.init('spikey-ball');
+                require(['demo/js/SpikeyBallDemo'], function (Demo) {
+                    Demo.create('spikey-ball-demo');
                 });
             </script>
         </div><!--
-        --><div id="sea" class="demo">
+        --><div id="sea-demo" class="demo">
             <h2 class="demo__title">Sea</h2>
             <div class="demo__surface">
                 <span class="demo__surface-text t-small-caps">Tap to play</span>
             </div>
             <script>
-                require(['demo/js/sea'], function (app) {
-                    app.init('sea');
+                require(['demo/js/SeaDemo'], function (Demo) {
+                    Demo.create('sea-demo');
                 });
             </script>
         </div><!--
