--- a/index.html
+++ b/index.html
@@ -40,13 +40,16 @@
                 });
             </script>
         </div><!--
-        --><div class="demo">
-            <h2 class="demo__title">Demo 003</h2>
-            <div class="demo__surface" id="demo-003"></div>
-        </div><!--
-        --><div class="demo">
-            <h2 class="demo__title">Demo 004</h2>
-            <div class="demo__surface" id="demo-004"></div>
+        --><div id="shiny-ball-demo" class="demo">
+            <h2 class="demo__title">Shiny Ball</h2>
+            <div class="demo__surface">
+                <span class="demo__surface-text t-small-caps">Tap to play</span>
+            </div>
+            <script>
+                require(['demo/js/ShinyBallDemo'], function (Demo) {
+                    Demo.create('shiny-ball-demo');
+                });
+            </script>
         </div>
 
         <noscript>Sorry, PolygonJS requires JavaScript support.</noscript>
