"Spiky" not "Spikey" - d'oh

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
             <p class="header__description t-twinsen">Tap a demo to toggle play / pause</p>
         </header>
 
-        <div id="spikey-ball-demo" class="demo">
-            <h2 class="demo__title">Spikey Ball</h2>
+        <div id="spiky-ball-demo" class="demo">
+            <h2 class="demo__title">Spiky Ball</h2>
             <div class="demo__surface"></div>
             <script>
-                require(['demo/js/SpikeyBallDemo'], function (Demo) {
-                    Demo.create('spikey-ball-demo');
+                require(['demo/js/SpikyBallDemo'], function (Demo) {
+                    Demo.create('spiky-ball-demo');
                 });
             </script>
         </div><!--
