--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <div id="spiky-ball-demo" class="demo">
             <h2 class="demo__title">Spiky Ball</h2>
-            <div class="demo__surface"></div>
+            <div class="demo__surface square-space-reserver"></div>
             <script>
                 require(['demo/js/SpikyBallDemo'], function (Demo) {
                     Demo.create('spiky-ball-demo');
@@ -32,7 +32,7 @@
         </div><!--
         --><div id="sea-demo" class="demo">
             <h2 class="demo__title">Sea</h2>
-            <div class="demo__surface"></div>
+            <div class="demo__surface square-space-reserver"></div>
             <script>
                 require(['demo/js/SeaDemo'], function (Demo) {
                     Demo.create('sea-demo');
@@ -41,7 +41,7 @@
         </div><!--
         --><div id="shiny-ball-demo" class="demo">
             <h2 class="demo__title">Shiny Ball</h2>
-            <div class="demo__surface"></div>
+            <div class="demo__surface square-space-reserver"></div>
             <script>
                 require(['demo/js/ShinyBallDemo'], function (Demo) {
                     Demo.create('shiny-ball-demo');
